Fixed various sticky footer issues with overlappping and animation issues on window resize (when nav or help was open)
Conflicts:
	stylesheets/_component.footer.scss

--- a/stylesheets/_component.footer.scss
+++ b/stylesheets/_component.footer.scss
@@ -1,17 +1,52 @@
 .footer {
+    -ms-transform: none;
+    -webkit-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: none;
+    -webkit-transform: none;
+    -webkit-transition: -webkit-transform 500ms ease;
+    backface-visibility: hidden;
     background-color: color(white);
     border-top: 1px solid color(gray, lightest);
+    bottom: 0;
     color: #999;
     font-size: $font-size-small;
-    padding: 0 $gutter-width;
-    position: fixed;
-    bottom: 0;
     left: 0;
+    padding: 6px $gutter-width;
+    position: static;
     right: 0;
+    transform: none;
+    transition: transform 500ms ease;
     z-index: $zindex-footer;
+
+    @include respond-min($screen-tablet) {
+        position: fixed;
+    }
 
     @include respond-min($screen-desktop) {
         left: 75px;
+    }
+
+    .open-nav & {
+        -webkit-transform: translate3d(75px, 0, 0) scale3d(1, 1, 1);
+        transform: translate3d(75px, 0, 0) scale3d(1, 1, 1);
+
+        @include respond-min($screen-desktop) {
+            left: 75px;
+            -webkit-transform: none;
+            transform: none;
+        }
+    }
+
+    .open-help & {
+        -webkit-transform: translate3d(-300px, 0, 0) scale3d(1, 1, 1);
+        transform: translate3d(-300px, 0, 0) scale3d(1, 1, 1);
+
+        @include respond-min($screen-desktop) {
+            left: 75px;
+            -webkit-transform: none;
+            transform: none;
+        }
     }
 
     a {
@@ -23,6 +58,18 @@
         &:hover {
             color: color(link);
         }
+    }
+}
+
+.lt-ie10 .open-nav .footer {
+    left: 75px;
+}
+
+.lt-ie10.open-help .footer {
+    right: 300px;
+
+    @include respond-min($screen-desktop) {
+        right: 0;
     }
 }
 
